--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <Button
+            <com.github.calculatortest.SymbolButton
                 android:id="@+id/btn_clear"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -63,7 +63,7 @@
                 android:layout_height="match_parent"
                 android:background="#000" />
 
-            <Button
+            <com.github.calculatortest.SymbolButton
                 android:id="@+id/btn_del"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -78,7 +78,7 @@
                 android:layout_height="match_parent"
                 android:background="#000" />
 
-            <Button
+            <com.github.calculatortest.SymbolButton
                 android:id="@+id/btn_divide"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -93,7 +93,7 @@
                 android:layout_height="match_parent"
                 android:background="#000" />
 
-            <Button
+            <com.github.calculatortest.SymbolButton
                 android:id="@+id/btn_multiply"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -117,12 +117,12 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <Button
+            <com.github.calculatortest.NumButton
                 android:id="@+id/btn_num7"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#fff"
+                android:background="@android:color/white"
                 android:text="7"
                 android:textColor="#000"
                 android:textSize="20sp" />
@@ -132,12 +132,12 @@
                 android:layout_height="match_parent"
                 android:background="#000" />
 
-            <Button
+            <com.github.calculatortest.NumButton
                 android:id="@+id/btn_num8"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#fff"
+                android:background="@android:color/white"
                 android:text="8"
                 android:textColor="#000"
                 android:textSize="20sp" />
@@ -147,12 +147,12 @@
                 android:layout_height="match_parent"
                 android:background="#000" />
 
-            <Button
+            <com.github.calculatortest.NumButton
                 android:id="@+id/btn_num9"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#fff"
+                android:background="@android:color/white"
                 android:text="9"
                 android:textColor="#000"
                 android:textSize="20sp" />
@@ -162,7 +162,7 @@
                 android:layout_height="match_parent"
                 android:background="#000" />
 
-            <Button
+            <com.github.calculatortest.SymbolButton
                 android:id="@+id/btn_minus"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -186,12 +186,12 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <Button
+            <com.github.calculatortest.NumButton
                 android:id="@+id/btn_num4"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#fff"
+                android:background="@android:color/white"
                 android:text="4"
                 android:textColor="#000"
                 android:textSize="20sp" />
@@ -201,12 +201,12 @@
                 android:layout_height="match_parent"
                 android:background="#000" />
 
-            <Button
+            <com.github.calculatortest.NumButton
                 android:id="@+id/btn_num5"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#fff"
+                android:background="@android:color/white"
                 android:text="5"
                 android:textColor="#000"
                 android:textSize="20sp" />
@@ -216,12 +216,12 @@
                 android:layout_height="match_parent"
                 android:background="#000" />
 
-            <Button
+            <com.github.calculatortest.NumButton
                 android:id="@+id/btn_num6"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#fff"
+                android:background="@android:color/white"
                 android:text="6"
                 android:textColor="#000"
                 android:textSize="20sp" />
@@ -231,7 +231,7 @@
                 android:layout_height="match_parent"
                 android:background="#000" />
 
-            <Button
+            <com.github.calculatortest.SymbolButton
                 android:id="@+id/btn_pluse"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -267,12 +267,12 @@
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
-                    <Button
+                    <com.github.calculatortest.NumButton
                         android:id="@+id/btn_num1"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:background="#fff"
+                        android:background="@android:color/white"
                         android:text="1"
                         android:textColor="#000"
                         android:textSize="20sp" />
@@ -282,12 +282,12 @@
                         android:layout_height="match_parent"
                         android:background="#000" />
 
-                    <Button
+                    <com.github.calculatortest.NumButton
                         android:id="@+id/btn_num2"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:background="#fff"
+                        android:background="@android:color/white"
                         android:text="2"
                         android:textColor="#000"
                         android:textSize="20sp" />
@@ -297,12 +297,12 @@
                         android:layout_height="match_parent"
                         android:background="#000" />
 
-                    <Button
+                    <com.github.calculatortest.NumButton
                         android:id="@+id/btn_num3"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:background="#fff"
+                        android:background="@android:color/white"
                         android:text="3"
                         android:textColor="#000"
                         android:textSize="20sp" />
@@ -322,22 +322,22 @@
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
-                    <Button
+                    <com.github.calculatortest.NumButton
                         android:id="@+id/btn_num0"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="2"
-                        android:background="#fff"
+                        android:background="@android:color/white"
                         android:text="0"
                         android:textColor="#000"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"/>
 
                     <TextView
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
                         android:background="#000" />
 
-                    <Button
+                    <com.github.calculatortest.SymbolButton
                         android:id="@+id/btn_point"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
@@ -360,7 +360,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
-                <Button
+                <com.github.calculatortest.EqualButton
                     android:id="@+id/btn_equal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
